--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                     <h1>Welcome to ML House Price Predictor</h1>
                 </div>
                 <div class="card-body">
-                    <form method="post" accept-charset="utf-8">
+                    <form method="post" çlass="form_el" accept-charset="utf-8">
                         <div class="row">
                             <div class="col-md-6 form-group" style="text-align: center">
                                 <label><b>Select the Neighborhood</b></label>
@@ -35,7 +35,7 @@
                                 <input type="text" class="form-control" id="bedrooms" name="bedrooms" placeholder="Enter the number of bedrooms" />
                             </div>
                             <div class="col-md-6 form-group" style="text-align: center">
-                                <label><b>Enter the total sqr_ft:</b></label>
+                                <label><b>Enter the total sqft:</b></label>
                                 <input type="text" class="form-control" id="total_sqft" name="total_sqft" placeholder="Enter the total sqr_ft" />
                             </div>
                             <div class="col-md-12 form-group">
@@ -54,7 +54,31 @@
         </div>
     </div>
 
+    <script>
+        function form_handler(event) {
+            event.preventDefault();
+        }
+
+        function send_data() {
+            document.querySelector("form").addEventListener("submit", form_handler);
+            var fd = new FormData(document.querySelector("form"));
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "/predict", true);
+            document.getElementById("prediction").innerHTML =
+                "Wait! predicting price";
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState == XMLHttpRequest.DONE) {
+                    document.getElementById("prediction").innerHTML =
+                        "Prediction: KES " + xhr.responseText;
+                }
+            };
+            xhr.onload = function() {};
+            xhr.send(fd);
+        }
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    -->
 </body>
 
 </html>
